HBASE-13914 Minor improvements to dev-support/publish_hbase_website.sh